public/style.css
@import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');

:root {
    --bg-color: #1b1b1b;
    --sb-color: #1f1f1f;
    --fg-color: #ececec;
}

body {
    font-family: "Space Mono", monospace;
    font-size: 125%;
}

.theme-dark body {
    background-color: var(--bg-color);
    color: var(--fg-color);
}

.theme-dark .sidebar {
    background-color: var(--sb-color);
}

.theme-dark a {
    color: #db4141;
}

.theme-dark a:hover {
    color: #c03333;
}

.theme-dark .title-tag {
    background-color: #db4141;
} 

.theme-light body {
    background-color: #dbdbdb;
    color: #1d1d1d;
}

.theme-light .sidebar {
    background-color: #cacaca;
}

.theme-light a {
    color: #db4141;
}

.theme-light a:hover {
    color: #c03333;
}

.theme-light .title-tag {
    background-color: #db4141;
} 

.sidebar {
    height: 100%;
    width: 250px;
    position: fixed;
    left: 0;
    top: 0;
    padding-left: 8px;
}

.sidebar div {
    display: block;
}

.post {
    margin-left: 260px;
}

.footer {
    font-size: 12px;
    text-align: center;
    margin-top: 125px;
}

a {
    cursor: pointer;
    transition-duration: 250ms;
    text-decoration: none;
} a:hover {
    transition-duration: 250ms;
}

.title-tag {
    line-height: 1.4;
    padding: 4px;
    color: white;
    margin-right: 16px;
    margin-left: 4px;
    margin-top: 14px;
    text-align: center;
    border-radius: 5px;
    cursor: pointer;
}

.title-tag h2 {
    margin: 0%;
}

.title-tag p {
    margin: 0%;
}

